--- a/OuFood/app/src/main/res/values/strings.xml
+++ b/OuFood/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="login">Đăng nhập</string>
     <string name="signup">Đăng ký</string>
     <string name="forgot_password">Quên mật khẩu</string>
-    <string name="xac_nhan">Xác nhận</string>
+    <string name="xac_nhan">Gửi</string>
 
 </resources>
