--- a/OuFood/app/src/main/res/values/strings.xml
+++ b/OuFood/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="signup">Đăng ký</string>
     <string name="forgot_password">Quên mật khẩu</string>
     <string name="xac_nhan">Gửi</string>
+    <string name="CURRENCY">đ</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
